[package]
name = "adz_os"
version = "0.4.0"
authors = ["Adam Rais <raisadamo@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false